luci-ssr-plus: fix URL import issuse

--- a/package/lean/luci-app-ssr-plus/luasrc/view/shadowsocksr/ssrurl.htm
+++ b/package/lean/luci-app-ssr-plus/luasrc/view/shadowsocksr/ssrurl.htm
@@ -98,7 +98,7 @@
         var ssu = ssrurl.split('://');
         console.log(ssu.length);
         if ((ssu[0] != "ssr" && ssu[0] != "ss" && ssu[0] != "vmess") || ssu[1] == "") {
-            s.innerHTML = "<font color='red'>无效的格式</font>";
+            s.innerHTML = "<font color='red'>无效格式</font>";
             return false;
         }
 
